Fix the problme of global shortcuts getting reset to 'None' on restart

REVIEW:103531
BUG:208641
BUG:239078
BUG:268897
FIXED-IN:4.8.0